[gd_scene load_steps=2 format=3 uid="uid://c641bnuftvrx1"]

[ext_resource type="Script" uid="uid://bprh3qffvdw72" path="res://Main/HUD/ConfigurationMenu/ConfigurationCategories/Scripts/configuration_category_base.gd" id="1_2acvn"]

[node name="ConfigurationCategoryBase" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2acvn")

[node name="narrationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
follow_focus = true
draw_focus_border = true

[node name="buttonContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="timeout" from="narrationTimer" to="." method="_on_narration_timer_timeout"]
